@@ -1,0 +1,69 @@
+.gdb_history
+.purify
+.svn
+BIG5.TXT
+BIG5HKSCS-2004.TXT
+BIG5HKSCS.TXT
+CP932.TXT
+CP936.TXT
+CP949.TXT
+CP950.TXT
+EUC-CN.TXT
+EUC-JISX0213.TXT
+EUC-JP.TXT
+EUC-KR.TXT
+JOHAB.TXT
+Makefile
+Makefile.pre
+NormalizationTest-3.2.0.txt
+NormalizationTest.txt
+SHIFTJIS.TXT
+SHIFT_JISX0213.TXT
+TAGS
+autom4te.cache
+build
+buildno
+config.cache
+config.log
+config.status
+config.status.lineno
+db_home
+gb-18030-2000.xml
+platform
+pyconfig.h
+python
+python.exe
+reflog.txt
+tags
+Lib/plat-mac/errors.rsrc.df.rsrc
+Doc/tools/sphinx/
+Doc/tools/docutils/
+Doc/tools/jinja/
+Doc/tools/pygments/
+Modules/Setup
+Modules/Setup.config
+Modules/Setup.local
+Modules/config.c
+Parser/pgen
+core
+
+syntax: glob
+libpython*.a
+*.o
+*.pyc
+*.pyo
+*.pyd
+*.cover
+*.orig
+*.rej
+*~
+Lib/lib2to3/*.pickle
+PCbuild/*.exe
+PCbuild/*.dll
+PCbuild/*.pdb
+PCbuild/*.lib
+PCbuild/*.exp
+PCbuild/*.o
+PCbuild/*.ncb
+PCbuild/*.bsc
+PCbuild/Win32-temp-*
